Implement Score Storage and Timer Display - Modified the `endQuiz` function to prompt for user initials and save high scores in local storage. - Scores are stored as an array of objects, each with initials and score, sorted by score in descending order. - The number of stored scores is limited to the top 5. - Added an 'id=timer' div in index.html for real-time display of remaining quiz time. - Scores are now persistently stored across browser sessions, and the remaining time is displayed while the quiz is active.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="quiz-content">
         <!-- Questions will be dynamically inserted here -->
     </div>
+    <div id="timer">
+        <!-- Time left will be shown here -->
+    </div>
     <div id="score-board">
         <!-- Score will be shown here -->
     </div>
