Implement High Score Display - Replaced 'scoreboard' div with 'highscores' and added 'highscores-list' ul to index.html for displaying high scores. - Defined a 'displayHighscores' function in quiz.js that retrieves high scores from local storage, clears the 'highscores-list' ul, and fills it with list items for each high score. - Called 'displayHighscores' at the end of the 'endQuiz' function and immediately when the script loads to ensure high scores are displayed both before and after taking a quiz. - High scores are now displayed on the page in a list, with each item showing a user's initials and their score.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <div id="timer">
         <!-- Time left will be shown here -->
     </div>
-    <div id="score-board">
-        <!-- Score will be shown here -->
+    <div id="highscores">
+        <h2>Highscores</h2>
+    <ul id="highscores-list">
+        <!-- High scores will be dynamically inserted here -->
+    </ul>
     </div>
     <script src="quiz.js"></script>
 </body>
