--- a/index.html
+++ b/index.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Quiz</title>
+    <title>JavaScript Jamboree</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>JavaScript Quiz</h1>
-    <button id="start-quiz">Start Quiz</button>
-    <div id="quiz-content">
-        <!-- Questions will be dynamically inserted here -->
+    <div id="main-content">
+        <div id="header-container">
+            <h1>JavaScript Jamboree</h1>
+            <button id="start-quiz">Start Quiz</button>
+        </div>
+        <div id="quiz-content">
+            <!-- Questions will be dynamically inserted here -->
+        </div>
     </div>
-    <div id="timer">
-        <!-- Time left will be shown here -->
-    </div>
-    <div id="highscores">
-        <h2>Highscores</h2>
-    <ul id="highscores-list">
-        <!-- High scores will be dynamically inserted here -->
-    </ul>
-    </div>
+    <div id="right-panel">
+        <div id="timer">
+            <!-- Time left will be shown here -->
+        </div>
+        <div id="highscores">
+            <h2>Highscores</h2>
+            <ul id="highscores-list">
+                <!-- High scores will be dynamically inserted here -->
+            </ul>
+        </div>
+    </div>    
     <script src="quiz.js"></script>
 </body>
 </html>
