UI improvements - added chalky font by linking it in the html head and adding the neccesary js - added button.jpeg - continued working on styling and layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Jamboree</title>
+    <link rel="stylesheet" href="https://use.typekit.net/luq0eik.css">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -21,7 +22,7 @@
             <!-- Time left will be shown here -->
         </div>
         <div id="highscores">
-            <h2>Highscores</h2>
+            <h2>High Scores</h2>
             <ul id="highscores-list">
                 <!-- High scores will be dynamically inserted here -->
             </ul>
