Implemented score display and tracking. Also some bugfixes - In case of no user input for initials, the quiz ends without saving the score. - Limited initials to 2 characters and converts lowercase letters to uppercase. - Modified the quiz system to accommodate questions with more than one correct answer by revising checkAnswer function to treat correctAnswer as an array of correct answers. - Adjusted HTML structure to display score and result below the timer. - Updated CSS rules to properly style and align the new score and result elements. - The checkAnswer function was modified to update the score display and result feedback every time an answer is selected. - Added deployed link to the README

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div id="timer">
             <!-- Time left will be shown here -->
         </div>
+        <div id="score-info">
+            <span id="score-display"></span>
+            <span id="result-display"></span>
+        </div>
         <div id="highscores">
             <h2>High Scores</h2>
             <ul id="highscores-list">
